<resources>
    <string name="app_name">Dapur Amy</string>
    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">List All Menu</string>
    <string name="menu_slideshow">Voting</string>
    <string name="menu_tools">Your Order</string>
    <string name="menu_share">Profil</string>
    <string name="menu_send">Notification</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_transfer">Transfer</string>
</resources>
